# TensorflowPyCppTutorial

./: README.md
cpp/: CMakeLists.txt  cnn.cpp
cpp/cmake/: FindEigen3.cmake  FindOpenCV3.cmake  FindProtobuf.cmake  FindTensorflow.cmake
cpp/models/: cae_128.pb
python/: cnn_training.py
python/checkpoints/: cae.pb  cae_128.ckpt  cae_128.pb.empty  checkpoint
